AM_CFLAG 	= -g -Wall -Wextra
bin_PROGRAMS 	= daust daustd
daust_SOURCES 	= daust.c config.h config.c messages.h messages.c init.h init.c node_data.h node_data.c serialize.h serialize.c socket.h socket.c dispatch.h dispatch.c
daustd_SOURCES 	= daustd.c config.h config.c messages.h messages.c init.h init.c node_data.h node_data.c serialize.h serialize.c socket.h socket.c server.h server.c
