AM_CFLAG 	= -g -Wall -Wextra
bin_PROGRAMS 	= daust daustd
SHARED_CFILES	= config.c messages.c init.c utils.c node_data.c serialize.c socket.c filter.c
SHARED_HFILES	= config.h messages.h init.h utils.h node_data.h serialize.h socket.h filter.h
DAUST_CFILES	= daust.c client_dispatch.c
DAUST_HFILES	= daust.h client_dispatch.h
DAUSTD_CFILES	= daustd.c server.c server_dispatch.c commands.c
DAUSTD_HFILES	= daustd.h server.h server_dispatch.h commands.h
daust_SOURCES	= $(DAUST_CFILES) $(DAUST_HFILES) $(SHARED_CFILES) $(SHARED_HFILES)
daustd_SOURCES	= $(DAUSTD_CFILES) $(DAUSTD_HFILES) $(SHARED_CFILES) $(SHARED_HFILES)
LDADD		= -lpthread
DAUST_CFLAGS	= -pthread
DAUSTD_CFLAGS	= -pthread
